# ChangeLog for x11-drivers/radeon-ucode
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.31 2013/06/30 19:58:04 chithanh Exp $

  30 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -radeon-ucode-20130204.ebuild, -radeon-ucode-20130402.ebuild,
  -radeon-ucode-20130411.ebuild, -radeon-ucode-20130513.ebuild,
  -radeon-ucode-20130625.ebuild, radeon-ucode-20130626.ebuild:
  Stabilize latest ucode, drop some old versions.

*radeon-ucode-20130626 (26 Jun 2013)

  26 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +radeon-ucode-20130626.ebuild:
  Add more ucode for power management.

*radeon-ucode-20130625 (25 Jun 2013)

  25 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +radeon-ucode-20130625.ebuild:
  Add ucode for recent hardware and new power management code.

*radeon-ucode-20130513 (14 May 2013)

  14 May 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +radeon-ucode-20130513.ebuild:
  Update for latest firmware.

*radeon-ucode-20130411 (28 Apr 2013)

  28 Apr 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +radeon-ucode-20130411.ebuild:
  Update to latest published ucode files.

*radeon-ucode-20130402 (03 Apr 2013)

  03 Apr 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +radeon-ucode-20130402.ebuild:
  Update to latest published ucode files.

*radeon-ucode-20130204 (15 Feb 2013)

  15 Feb 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +radeon-ucode-20130204.ebuild, -radeon-ucode-20110302.ebuild,
  -radeon-ucode-20110531.ebuild:
  Update for new OLAND firmware.

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> radeon-ucode-20120320.ebuild:
  Stable for x86, wrt bug #419473

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org> radeon-ucode-20120320.ebuild:
  Stable for amd64, wrt bug #419473

*radeon-ucode-20120320 (20 Mar 2012)
