@@ -52,7 +52,9 @@ DIST VERDE_me.bin 8576 SHA256 128261ffbbabac48d5df17279ba13582cf4a5878c4bc5091f7
 DIST VERDE_pfp.bin 8576 SHA256 6f16d95f7209b5d94f98420cf6291f834804ae774b49c9d3a5cd1a6988af962b
 DIST VERDE_rlc.bin 8192 SHA256 eed05040fbd74d784090560b8c13f7d95289f3b2a44a259de24fda27e5d9334d
 DIST radeon-ucode-20130626.tar.xz 418868 SHA256 1c339bb08b7f23386d0aa3749e0a9e532a9fc976df52051c45e35d967484b069 SHA512 c3eb1911cb7ab646ae4afc9120fb227328d0cabfbaf1124e472a2451541295572660db0357013cf738308d2e2aa033740cf91b4561ead6915a87ba4670dc147a WHIRLPOOL c7d7873027a77f469039ac44f05073dd41548a881d355a92a8bb97cdf23b171c97677a9c685da4ecb3a135ee7381622b8be6c48b4d46371fc06ae7766d977a3b
+DIST radeon-ucode-20130826.tar.xz 452612 SHA256 713c83050ce3363638e73b836f04fb88d902052f5af07da1459089ef94a5f265 SHA512 ffdeeba36056d5cdb414b3e9883d4814b2c719d9394afcf51e62b042ed924b42f83a496326f301d579d27f922da3297e8cda8b78b9f5abf66961505aa8b0c3ef WHIRLPOOL a8bf47ecbbd651f44ebce8b35b3c8592e290ec0c47571ef831e5866a8c02352affebe8c1f9293b19d70716bb91719375af2f9f0f0e3d05ab71ac334d0593df63
 EBUILD radeon-ucode-20120320.ebuild 2346 SHA256 91c4ab3f85714ca1fc759726b0d41f4dbe3a8d6cc3f1b72aa6597b0091368496 SHA512 d18e3a50027f5e7856fdaa1f1a28ac70a246c2f2ed5e44c909aa5b66b6496a06994f2c85a77f8f77933768ac0e5565fd0f65a7fd21b3bc74f94aa00d0c9c3e56 WHIRLPOOL ab3f9cae57edd1c66c53fa3420f4e10dafeae4c7c3fb50f3c9cbabba2781176447fcdd6ae08b25e69e14204779dca885758fc679b817fa931c8f07622a3c31b6
 EBUILD radeon-ucode-20130626.ebuild 1435 SHA256 35c30d9252b9b49ca38e97a18b8fc810a58261ac9007db15520555efd9cafb1d SHA512 7d6b9eaec34f8b091ffb69fb23955ef9bf269cdc82da14dea288f0bb93b4201f77756dd0ee10056ad01fcd6a3dbd2f2c60096612ecc273615998f6be1dee35b9 WHIRLPOOL ba4645b650ca9e143208d405fdcd076bf928c3c67c44505edb2c5faf4219f44bd4daf5d197de809959dc194821daf52032a9bb72abde97843beebeab2ba801e1
-MISC ChangeLog 4955 SHA256 07b7c6e42ca09b3e9ff27d68c1b0c04b63f00fc5348aedd68149811021ad0a5f SHA512 d51380513cb731b1089b1015feee2e68ceb815d02f2ea2d6344c22d47fa9cd96b54c4b8b995e3921d18525f848664001e8daa534b6791fc17941ff07111a1862 WHIRLPOOL 694c8d829d0b3155f8154d49eaaf7df43d04b31797216adc9de6559886aa42bf8a6b0ee6cd77d443dc7c06cc10c3ac8dcbdbbd6cf7c3ef52faae327f214ae73e
+EBUILD radeon-ucode-20130826.ebuild 1381 SHA256 5a824eb1b13438424584cf8c3e31827b4ffb6f19dfe4d19a8ffc3ec0d9cb2077 SHA512 62cf267517be68b23d4772cf25a06bdd9f86269f7cc39168f4efe9dfbded851605c2603ac14e56b6b7b78f7ef132559fefcee7f5b8ec7051fe1d5717ca526bea WHIRLPOOL bf4ef24bb297fa070f929b26d17fa63920d16e2849be2bff5ff50ad387adb270107036fef4fbf869ae5e647955b028f08867ca1cc0f8e38f2987964d94d39da6
+MISC ChangeLog 5143 SHA256 52222ea4e9f465e5c1c90de0a4fff1e4224cdbe7c9f5aebaa2cd2fdee7530161 SHA512 2b469e6f4fa6651bce3b1580a69204d999efbc5775ac1b1fa9b3747688712b483cf73bb1d931011a37f5c558a3523a879cb655a5637b222ac10d58769608f7a9 WHIRLPOOL cae3809117eee53177dc5fd8a60af7aa466f2bada30238b3c0ef3f31ecfbe4ef956eaf9896d76fe9f04934f56ddfb6775cfdccaa4a5f089ef581ac7145512c6d
 MISC metadata.xml 156 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 SHA512 daa9bb2a9b1a16220327bc394f10d93a1a8a427bfbed8808cd247c1dfd5a5b87a4945d55d8243e07fede2c8182a208c618ebd483773d77e9d23862ec77016019 WHIRLPOOL 691e028648bb8b60771d74ef718c51fdb0f4a587e984f6ac4c13d7796415ecf770df2e0fd766399091771924bb65995e9bb290baa35971c56e07d76f2bbf6d93
