@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/radeon-ucode
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.31 2013/06/30 19:58:04 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.32 2013/09/08 12:25:28 chithanh Exp $
+
+*radeon-ucode-20130826 (08 Sep 2013)
+
+  08 Sep 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  +radeon-ucode-20130826.ebuild:
+  Update for new KAVERI firmware, bug #484056.
 
   30 Jun 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   -radeon-ucode-20130204.ebuild, -radeon-ucode-20130402.ebuild,
